src/sass/templates/_ndla_timeline.scss
@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;0,900;1,400;1,600;1,700;1,900&display=swap");

//////////////////////////////////////////////
/// VARIABLES
//////////////////////////////////////////////

$restrainedWidth: $base-line-height * 24;
$topBarHeight: $base-line-height * 2;
$timelineHeight: 60rem;
$circleEraHeight: 30rem;
$introPageWidth: 40rem;
$authorsHeight: 33rem;

%restrained {
  max-width: $restrainedWidth;
  margin: 0 auto;
  padding: 0 ($base-line-height * 1);

  @include breakpoint($large) {
    padding: 0 ($base-line-height * 1.5);
  }
}

/// GLOBAL

* {
  box-sizing: border-box;
}

body,
html {
  font-family: "Source Sans Pro", sans-serif;
  margin: 0;
  overflow-x: hidden; //* DEBUG
  width: 100%;
  height: 100%;
}

html,
body,
#app,
#vue-app,
.lo_globalContainer,
.lo_sectionList-wrapper {
  height: 100%;
}

img {
  width: 100%;
  height: auto;
}

button {
  z-index: 1 {

  }

  transition: 0.2s all;
}

button:hover {
  cursor: pointer;
}

a {
  color: $main-color;
}

/// TYPOGRAPHY

h3 {
  @include breakpoint($medium) {
    margin-top: $base-line-height * 2;
  }
}

blockquote {
  margin: $base-line-height 0;
  border-left: 4px solid #e6e6e6;
  padding-left: $base-line-height;
}

/// LAYOUT

.lo_globalContainer {
  position: relative;
  width: 100%;
  height: $timelineHeight;
  height: 100%;
}

.lo_restrainedContainer {
  @extend %restrained;
}

/// TOPBAR

.lo_topBar {
  position: sticky;
  position: -webkit-sticky;
  top: 0px;
  z-index: 100;
}

.lo_topBar_header {
  display: flex;
  align-items: center;
  width: 100%;
  height: $topBarHeight;
  background: $light-grey;
  // background: rgba(0, 0, 0, 0.5);
  font-weight: 900;
  font-size: 0.9rem;
  color: $main-color;
  text-transform: uppercase;
  padding: 0 ($base-line-height / 4);
  position: fixed;
  top: 0px;
}

.lo_topBar_wrapper {
  position: absolute;
  left: 0;
  right: 0;
  height: 200px;
  overflow: hidden;
}
.lo_topBar_timeline {
  // position: absolute;
  position: sticky;
  top: $topBarHeight;

  // ul {
  display: flex;
  flex-direction: row;
  // position: relative;
  // height: $timelineHeight;
  width: 100%;
  padding: 0;

  margin: 0;
  // }

  pointer-events: none;
  z-index: 1000; // * To put it above other elements on the timeline
  // top: $topBarHeight;
  // top: 0;
  //left: $introPageWidth;
}
.lo_topBar_timeline.lineslots {
  position: absolute;
  top: $topBarHeight;
  z-index: initial;

  .timeslot {
    list-style-type: none;
  }
}

.lo_topBar_timeline::before {
  content: "";
  // width: 8.75rem;
  // width: 1000; //! TODO commented out, set in template // ($base-line-height * 2) + 1rem;
  background: white;
  // left: -8.75rem;
  left: ($base-line-height * 2 * -1) - 1rem;
  height: 2.5rem;
  position: absolute;
  // left: -$introPageWidth;

  @include breakpoint($medium) {
    // width: 1000px; //! TODO commented out, set in template// ($base-line-height * 5) + 1rem;
    left: ($base-line-height * 5 * -1) - 1rem;
  }
}

.lo_sectionList {
  position: relative;
  top: $base-line-height * 1.8;
  margin: 0;
  display: flex;
  flex-direction: row;
}

.lo_sectionEra {
  display: flex;
  flex-direction: column;
  position: relative;
}

.lo_sectionsIntroPage {
  position: relative;
  display: flex;
  flex-shrink: 0;
  width: 110vw;
  margin-bottom: 1.75rem;
  padding: $base-line-height 0 $base-line-height $base-line-height;

  @include breakpoint($medium) {
    width: $introPageWidth;
  }
}

/// PART ON THE LEFT OF THE TIMELINE > INSTRUCTIONS

.startInstructions h1 {
  line-height: 110%;
  color: $dark-grey;
  margin-top: $base-line-height;
}

.logoNDLA {
  max-width: $base-line-height * 3;

  fill: #20588f;

  margin-top: $base-line-height;
}

.startTimeline {
  position: relative;
  top: 1.1rem;
  display: block;
  flex-shrink: 0;
  background: tint($main-color, 90%);
  width: $base-line-height * 2;
  height: calc(100% + 10px);
  border-top-left-radius: 50rem;
  border-bottom-left-radius: 50rem;
  margin-left: $base-line-height;
  box-shadow: (-6px) 0px 6px 0px rgba(black, 0.3);

  @include breakpoint($medium) {
    width: $base-line-height * 5;
    margin-left: $base-line-height * 3;
  }
}

.btn_menu,
.btn_close,
.btn_back {
  display: flex;
  align-items: center;
  justify-content: center;
  // width: $base-line-height * 1.5;
  // height: $base-line-height * 1.5;
  background: none;
  border-radius: 4px;
  border: 2px solid transparent;
}

.btn_back svg {
  fill: white;
}

.btn_menu:hover,
.btn_close:hover,
.btn_back:hover {
  background: white;
  border-color: $main-color;
}

.btn_menu:hover svg,
.btn_close:hover svg,
.btn_back:hover svg {
  fill: $main-color;
}

.header_eraName {
  margin-left: $base-line-height / 2;
}

// TIMESLOT

.timeSlot {
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 0;
  list-style: none;
  font-weight: bold;
  align-items: flex-start;
  flex-shrink: 0;
}

.timeSlot_year {
  padding: 0.1rem 0 0.5rem 0;
  background: white;
  width: 100%;
  text-align: left;
  font-size: 0.9rem;
  transform: translateX(-1rem);
  box-shadow: 12px 4px 0px 0px $main-color;
}

.timeSlot_dot {
  position: relative;
  transform: translate(-40%, -40%);
  width: $base-line-height / 2;
  height: $base-line-height / 2;
  background: $main-color;
  border-radius: 50%;
}

.timeSlot_line {
  position: relative;
  position: absolute;
  width: 2px;
  top: 0;
  height: 96rem;
  background: rgba(white, 0.3);
  // background: red;
  overflow: hidden;
}

// SECTIONS/ERAS

.sectionList {
  display: flex;
  flex-direction: row;
  list-style: none;
  padding: 0;
  margin: 0;
  background: $main-color;
  margin-bottom: 1.75rem;
  box-shadow: -6px 0px 6px 0px rgb(0 0 0 / 30%);
}

.sectionList_item {
  padding: 0;
  margin: 0;
  height: 100%;
}

.sectionList .sectionList_item:nth-child(odd) .lo_sectionEra {
  background: tint($main-color, 90%);
}
/* ... */

